SQONE-523 Make sure nav component inside the section nav collapses its horizontal whitespace.

--- a/wp-content/themes/core/components/section_nav/css/section-nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section-nav.pcss
@@ -59,6 +59,12 @@
 	@media (--viewport-small) {
 		display: block;
 	}
+
+	.c-nav {
+		@media (--viewport-small) {
+			display: flex; /* Collapse whitespace inside the section nav container to properly menu item fit. */
+		}
+	}
 }
 
 .c-section-nav__list {
